--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,4 +1,5 @@
 on:
+  workflow_dispatch: {}
   pull_request: {}
   push:
     branches:
@@ -12,12 +13,12 @@ on:
 name: Semgrep
 jobs:
   semgrep:
-    name: Scan
+    name: semgrep/ci
     runs-on: ubuntu-20.04
     env:
       SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
     container:
       image: returntocorp/semgrep
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - run: semgrep ci
